@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.1.5.t1
 
+  Added c.t.h.CombinedHfs to allow for smaller files reachable by c.t.h.Hfs taps to be aggregated into fewer
+  splits, thus fewer map tasks. @sjlee
+
   [pull request 17] Fixed an issue where MultiInputFormat.getSplits() goes into a stack overflow due to missing input formats.
 
   Enabled builds based on hadoop 2.0.
